bk_ida/gccida/g0/lang_independent_init
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lang_independent_init/src/toplev.c:5517:32: error: must use 'union' tag to refer to type 'tree_node'
lang_expand_expr = ( rtx ( *)( tree_node *, rtx, machine_mode, expand_modifier))do_abort; 
                               ^
                               union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lang_independent_init/src/toplev.c:5518:25: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
tree_code_length[1] = ( lang_hooks_0.identifier_size - 17) >> 3; 
                        ^~~~~~~~~~~~
                        lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lang_independent_init/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lang_independent_init/src/toplev.c:5525:6: error: use of undeclared identifier 'debug_info_level_0'; did you mean 'debug_info_level'?
v0 = debug_info_level_0 == DINFO_LEVEL_NORMAL 
     ^~~~~~~~~~~~~~~~~~
     debug_info_level
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lang_independent_init/src/toplev.c:319:23: note: 'debug_info_level' declared here
enum debug_info_level debug_info_level = DINFO_LEVEL_NONE;
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lang_independent_init/src/toplev.c:5526:4: error: use of undeclared identifier 'debug_info_level_0'; did you mean 'debug_info_level'?
|| debug_info_level_0 == DINFO_LEVEL_VERBOSE 
   ^~~~~~~~~~~~~~~~~~
   debug_info_level
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lang_independent_init/src/toplev.c:319:23: note: 'debug_info_level' declared here
enum debug_info_level debug_info_level = DINFO_LEVEL_NONE;
                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/lang_independent_init/src/obj/toplev.o] Error 1
